--- a/assets/styles/popup.css
+++ b/assets/styles/popup.css
@@ -1,9 +1,12 @@
 #age-verification-popup {
     position: fixed;
-    width: 100%;height:100%;
-    top: 0;left: 0;
-    display:grid;
-    place-items: center;
+    width: 100%;
+    height:100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     background-color: rgba(0, 0, 0, .5);
@@ -19,6 +22,10 @@
     padding: 20px;
     border-radius:4px;
     background-color:white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 #age-verification-popup h2 {
@@ -37,4 +44,6 @@
     padding: 10px 20px;
     border: none;
     cursor: pointer;
+    margin: 5px;
+    border-radius: 4px;
 }
